# ellphi

./: .flake8  README.md  epencil-ph.py  pyproject.toml
.github/workflows/: python-app.yml
notebooks/: .gitignore  epencil-ph.ipynb  eph-6rings-PH.ipynb  quickstart.ipynb
src/ellphi/: __init__.py  ellcloud.py  epencil.py  geometry.py  solver.py  visualization.py
tests/: test_basic.py  test_epencil.py  test_geometry.py
