[tool.poetry]
name = "ellphi"
version = "0.1.0"
description = "Fast ellipse tangency solver"
authors = ["Tomoki Uda <tomoki.uda@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.dependencies]
python = "^3.10.15"
# homcloud = "^4.5.1"
numpy = "^2.1.3"
ipykernel = "^6.29.5"
nbformat = "^5.10.4"
plotly = "^5.24.1"
ripser = "^0.6.10"
persim = "^0.3.7"
anywidget = "*"
jupyterlab = "*"

[tool.poetry.group.dev.dependencies]
numpy = "^2.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
