[project]
name = "ellphi"
version = "0.1.0"
description = "Fast ellipse tangency solver"
authors = [
  { name = "Toshiki Uda", email = "tomoki.uda@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.10"
dynamic = ["dependencies", "optional-dependencies"]

dependencies = [
  "numpy>=1.26",
  "scipy>=1.12"
]

[project.optional-dependencies]
# `pip install ellphi[dev]` / `poetry install -E dev`
dev = [
  "jupyterlab>=4.1",
  "ipykernel>=6.28",
  "nbformat>=5.10",
  "matplotlib>=3.9",
  "plotly>=5.22",
  # "anywidget>=0.9",
  # "ripser>=0.6",
  # "persim>=0.3"
]

[tool.poetry]
packages = [{ include = "ellphi", from = "src" }]
package-mode = true

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

